--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "reactstrap": "^9.2.3",
+    "redux": "^5.0.1",
     "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
