--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
+    "mobx-react": "^9.2.0",
     "react": "^19.0.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.2.0",
     "reactstrap": "^9.2.3",
     "redux": "^5.0.1",
     "sweetalert2": "^11.17.2"
